--- a/Main_All_Digit_MNIST.ipynb
+++ b/Main_All_Digit_MNIST.ipynb
@@ -405,7 +405,7 @@
         "def get_mean(x):\n",
         "    return x / np.sum(x, axis=-1, keepdims=True)\n",
         "\n",
-        "def calculate_distance4(model, predictions, last_hidden_layer_outs):\n",
+        "def calculate_distance(model, predictions, last_hidden_layer_outs):\n",
         "\n",
         "    model.eval()\n",
         "\n",
@@ -911,7 +911,7 @@
         "        with torch.no_grad():\n",
         "            last_hidden_layer_outputs_clean = model_dropout.last_hidden_layer_output(sample_image).detach().cpu().numpy()\n",
         "\n",
-        "        distances_clean = calculate_distance4(my_mlp_model_2, preds, last_hidden_layer_outputs_clean)\n",
+        "        distances_clean = calculate_distance(my_mlp_model_2, preds, last_hidden_layer_outputs_clean)\n",
         "\n",
         "        distances_clean_tensor = torch.cat([distances_clean_tensor, distances_clean])\n",
         "\n",
@@ -937,7 +937,7 @@
         "        with torch.no_grad():\n",
         "            last_hidden_layer_outputs_noisy = model_dropout.last_hidden_layer_output(image_noisy).detach().cpu().numpy()\n",
         "\n",
-        "        distances_noisy = calculate_distance4(my_mlp_model_2, preds_noisy, last_hidden_layer_outputs_noisy)\n",
+        "        distances_noisy = calculate_distance(my_mlp_model_2, preds_noisy, last_hidden_layer_outputs_noisy)\n",
         "\n",
         "\n",
         "        distances_noisy_tensor = torch.cat([distances_noisy_tensor, distances_noisy])\n",
@@ -964,7 +964,7 @@
         "        with torch.no_grad():\n",
         "            last_hidden_layer_outputs_dirty = model_dropout.last_hidden_layer_output(image_dirty).detach().cpu().numpy()\n",
         "\n",
-        "        distances_dirty = calculate_distance4(my_mlp_model_2, preds_dirty, last_hidden_layer_outputs_dirty)\n",
+        "        distances_dirty = calculate_distance(my_mlp_model_2, preds_dirty, last_hidden_layer_outputs_dirty)\n",
         "\n",
         "        distances_dirty_tensor = torch.cat([distances_dirty_tensor, distances_dirty])\n",
         "\n",
